wxc/include/ewxw/wxc_glue.h

void       wxGrid_AutoSize( TSelf(wxGrid) _obj );
void       wxGrid_AutoSizeColumn( TSelf(wxGrid) _obj, int col, TBoolInt setAsMin );
void       wxGrid_AutoSizeColumns( TSelf(wxGrid) _obj, TBoolInt setAsMin );
void       wxGrid_AutoSizeRow( TSelf(wxGrid) _obj, int row, TBoolInt setAsMin );
void       wxGrid_AutoSizeRows( TSelf(wxGrid) _obj, TBoolInt setAsMin );
TBool      wxGrid_CanDragColSize( TSelf(wxGrid) _obj );
TBool      wxGrid_CanDragGridSize( TSelf(wxGrid) _obj );
TBool      wxGrid_CanDragRowSize( TSelf(wxGrid) _obj );
void       wxGrid_CellToRect( TSelf(wxGrid) _obj, int row, int col, TRectOut(_x,_y,_w,_h) );
void       wxGrid_ClearSelection( TSelf(wxGrid) _obj );
void       wxGrid_DisableDragColSize( TSelf(wxGrid) _obj );
void       wxGrid_DisableDragGridSize( TSelf(wxGrid) _obj );
void       wxGrid_DisableDragRowSize( TSelf(wxGrid) _obj );
void       wxGrid_EnableDragColSize( TSelf(wxGrid) _obj, TBool enable );
void       wxGrid_EnableDragGridSize( TSelf(wxGrid) _obj, TBool enable );
void       wxGrid_EnableDragRowSize( TSelf(wxGrid) _obj, TBool enable );
void       wxGrid_EnableGridLines( TSelf(wxGrid) _obj, TBool enable );
void       wxGrid_GetCellAlignment( TSelf(wxGrid) _obj, int row, int col, TSizeOut(horiz, vert) );
void       wxGrid_GetCellBackgroundColour( TSelf(wxGrid) _obj, int row, int col, TClass(wxColour) colour );
TClass(wxGridCellEditor) wxGrid_GetCellEditor( TSelf(wxGrid) _obj, int row, int col );
void       wxGrid_GetCellFont( TSelf(wxGrid) _obj, int row, int col, TClass(wxFont) font );
void       wxGrid_GetCellHighlightColour( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );
TClass(wxGridCellRenderer) wxGrid_GetCellRenderer( TSelf(wxGrid) _obj, int row, int col );
void       wxGrid_GetCellTextColour( TSelf(wxGrid) _obj, int row, int col, TClass(wxColour) colour );
TStringLen wxGrid_GetCellValue( TSelf(wxGrid) _obj, int row, int col, TStringOutVoid _buf );
void       wxGrid_GetColLabelAlignment( TSelf(wxGrid) _obj, TSizeOut(horiz, vert)  );
int        wxGrid_GetColLabelSize( TSelf(wxGrid) _obj );
TStringLen wxGrid_GetColLabelValue( TSelf(wxGrid) _obj, int col, TStringOutVoid _buf );
int        wxGrid_GetColSize( TSelf(wxGrid) _obj, int col );
void       wxGrid_GetDefaultCellAlignment( TSelf(wxGrid) _obj, TSizeOut(horiz, vert)  );
void       wxGrid_GetDefaultCellBackgroundColour( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );
void       wxGrid_GetDefaultCellFont( TSelf(wxGrid) _obj, TClassRef(wxFont) _ref );
void       wxGrid_GetDefaultCellTextColour( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );
int        wxGrid_GetDefaultColLabelSize( TSelf(wxGrid) _obj );
int        wxGrid_GetDefaultColSize( TSelf(wxGrid) _obj );
TClass(wxGridCellEditor) wxGrid_GetDefaultEditor( TSelf(wxGrid) _obj );
TClass(wxGridCellRenderer) wxGrid_GetDefaultRenderer( TSelf(wxGrid) _obj );
int        wxGrid_GetDefaultRowLabelSize( TSelf(wxGrid) _obj );
int        wxGrid_GetDefaultRowSize( TSelf(wxGrid) _obj );
int        wxGrid_GetGridCursorCol( TSelf(wxGrid) _obj );
int        wxGrid_GetGridCursorRow( TSelf(wxGrid) _obj );
void       wxGrid_GetGridLineColour( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );
void       wxGrid_GetLabelBackgroundColour( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );
void       wxGrid_GetLabelFont( TSelf(wxGrid) _obj, TClassRef(wxFont) _ref );
void       wxGrid_GetLabelTextColour( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );
void       wxGrid_GetRowLabelAlignment( TSelf(wxGrid) _obj, TSizeOut(horiz,vert) );
int        wxGrid_GetRowLabelSize( TSelf(wxGrid) _obj );
TStringLen wxGrid_GetRowLabelValue( TSelf(wxGrid) _obj, int row, TStringOutVoid _buf );
int        wxGrid_GetRowSize( TSelf(wxGrid) _obj, int row );
int        wxGrid_GridLinesEnabled( TSelf(wxGrid) _obj );
TBool      wxGrid_IsInSelection( TSelf(wxGrid) _obj, int row, int col );
TBool      wxGrid_IsReadOnly( TSelf(wxGrid) _obj, int row, int col );
TBool      wxGrid_IsSelection( TSelf(wxGrid) _obj );
TBool      wxGrid_IsVisible( TSelf(wxGrid) _obj, int row, int col, TBoolInt wholeCellVisible );
void       wxGrid_MakeCellVisible( TSelf(wxGrid) _obj, int row, int col );
TBoolInt   wxGrid_MoveCursorDown( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MoveCursorDownBlock( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MoveCursorLeft( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MoveCursorLeftBlock( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MoveCursorRight( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MoveCursorRightBlock( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MoveCursorUp( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MoveCursorUpBlock( TSelf(wxGrid) _obj, TBoolInt expandSelection );
TBoolInt   wxGrid_MovePageDown( TSelf(wxGrid) _obj );
TBoolInt   wxGrid_MovePageUp( TSelf(wxGrid) _obj );
void       wxGrid_SelectAll( TSelf(wxGrid) _obj );
void       wxGrid_SelectBlock( TSelf(wxGrid) _obj, int topRow, int leftCol, int bottomRow, int rightCol, TBoolInt addToSelected );
void       wxGrid_SelectCol( TSelf(wxGrid) _obj, int col, TBoolInt addToSelected );
void       wxGrid_SelectRow( TSelf(wxGrid) _obj, int row, TBoolInt addToSelected );
void       wxGrid_SetCellAlignment( TSelf(wxGrid) _obj, int row, int col, int horiz, int vert );
void       wxGrid_SetCellBackgroundColour( TSelf(wxGrid) _obj, int row, int col, TClass(wxColour) colour );
void       wxGrid_SetCellEditor( TSelf(wxGrid) _obj, int row, int col, TClass(wxGridCellEditor) editor );
void       wxGrid_SetCellFont( TSelf(wxGrid) _obj, int row, int col, TClass(wxFont) font );
void       wxGrid_SetCellHighlightColour( TSelf(wxGrid) _obj, TClass(wxColour) col );
void       wxGrid_SetCellRenderer( TSelf(wxGrid) _obj, int row, int col, TClass(wxGridCellRenderer) renderer );
void       wxGrid_SetCellTextColour( TSelf(wxGrid) _obj, int row, int col, TClass(wxColour) colour );
void       wxGrid_SetCellValue( TSelf(wxGrid) _obj, int row, int col, TString s );
void       wxGrid_SetColAttr( TSelf(wxGrid) _obj, int col, TClass(wxGridCellAttr) attr );
void       wxGrid_SetColFormatBool( TSelf(wxGrid) _obj, int col );
void       wxGrid_SetColFormatCustom( TSelf(wxGrid) _obj, int col, TString typeName );
void       wxGrid_SetColFormatFloat( TSelf(wxGrid) _obj, int col, int width, int precision );
void       wxGrid_SetColFormatNumber( TSelf(wxGrid) _obj, int col );
void       wxGrid_SetColLabelAlignment( TSelf(wxGrid) _obj, int horiz, int vert );
void       wxGrid_SetColLabelSize( TSelf(wxGrid) _obj, int height );
void       wxGrid_SetColLabelValue( TSelf(wxGrid) _obj, int col, TString label );
void       wxGrid_SetColMinimalWidth( TSelf(wxGrid) _obj, int col, int width );
void       wxGrid_SetColSize( TSelf(wxGrid) _obj, int col, int width );
void       wxGrid_SetDefaultCellAlignment( TSelf(wxGrid) _obj, int horiz, int vert );
void       wxGrid_SetDefaultCellBackgroundColour( TSelf(wxGrid) _obj, TClass(wxColour) colour );
void       wxGrid_SetDefaultCellFont( TSelf(wxGrid) _obj, TClass(wxFont) font );
void       wxGrid_SetDefaultCellTextColour( TSelf(wxGrid) _obj, TClass(wxColour) colour );
void       wxGrid_SetDefaultColSize( TSelf(wxGrid) _obj, int width, TBoolInt resizeExistingCols );
void       wxGrid_SetDefaultEditor( TSelf(wxGrid) _obj, TClass(wxGridCellEditor) editor );
void       wxGrid_SetDefaultRenderer( TSelf(wxGrid) _obj, TClass(wxGridCellRenderer) renderer );
void       wxGrid_SetDefaultRowSize( TSelf(wxGrid) _obj, int height, TBoolInt resizeExistingRows );
void       wxGrid_SetGridCursor( TSelf(wxGrid) _obj, int row, int col );
void       wxGrid_SetGridLineColour( TSelf(wxGrid) _obj, TClass(wxColour) col );
void       wxGrid_SetLabelBackgroundColour( TSelf(wxGrid) _obj, TClass(wxColour) colour );
void       wxGrid_SetLabelFont( TSelf(wxGrid) _obj, TClass(wxFont) font );
void       wxGrid_SetLabelTextColour( TSelf(wxGrid) _obj, TClass(wxColour) colour );
void       wxGrid_SetReadOnly( TSelf(wxGrid) _obj, int row, int col, TBool isReadOnly );
void       wxGrid_SetRowAttr( TSelf(wxGrid) _obj, int row, TClass(wxGridCellAttr) attr );
void       wxGrid_SetRowLabelAlignment( TSelf(wxGrid) _obj, int horiz, int vert );
void       wxGrid_SetRowLabelSize( TSelf(wxGrid) _obj, int width );
void       wxGrid_SetRowLabelValue( TSelf(wxGrid) _obj, int row, TString label );
void       wxGrid_SetRowMinimalHeight( TSelf(wxGrid) _obj, int row, int width );
void       wxGrid_SetRowSize( TSelf(wxGrid) _obj, int row, int height );
int        wxGrid_XToEdgeOfCol( TSelf(wxGrid) _obj, int x );
int        wxGrid_YToEdgeOfRow( TSelf(wxGrid) _obj, int y );