wxcl/src/windows/cffi/wxGrid_cpp.lisp


(defcfun ("wxGrid_YToEdgeOfRow" wxGrid_YToEdgeOfRow) :int
  (_obj :pointer)
  (y :int))

(defcfun ("wxGrid_XToEdgeOfCol" wxGrid_XToEdgeOfCol) :int
  (_obj :pointer)
  (x :int))

(defcfun ("wxGrid_CellToRect" wxGrid_CellToRect) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (x :int)
  (y :int)
  (w :int)
  (h :int))

(defcfun ("wxGrid_GetGridCursorRow" wxGrid_GetGridCursorRow) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetGridCursorCol" wxGrid_GetGridCursorCol) :int
  (_obj :pointer))

(defcfun ("wxGrid_IsVisible" wxGrid_IsVisible) :int
  (_obj :pointer)
  (row :int)
  (col :int)
  (wholeCellVisible :int))

(defcfun ("wxGrid_MakeCellVisible" wxGrid_MakeCellVisible) :void
  (_obj :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGrid_SetGridCursor" wxGrid_SetGridCursor) :void
  (_obj :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGrid_MoveCursorUp" wxGrid_MoveCursorUp) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_MoveCursorDown" wxGrid_MoveCursorDown) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_MoveCursorLeft" wxGrid_MoveCursorLeft) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_MoveCursorRight" wxGrid_MoveCursorRight) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_MovePageDown" wxGrid_MovePageDown) :int
  (_obj :pointer))

(defcfun ("wxGrid_MovePageUp" wxGrid_MovePageUp) :int
  (_obj :pointer))

(defcfun ("wxGrid_MoveCursorUpBlock" wxGrid_MoveCursorUpBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_MoveCursorDownBlock" wxGrid_MoveCursorDownBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_MoveCursorLeftBlock" wxGrid_MoveCursorLeftBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_MoveCursorRightBlock" wxGrid_MoveCursorRightBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(defcfun ("wxGrid_GetDefaultRowLabelSize" wxGrid_GetDefaultRowLabelSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetRowLabelSize" wxGrid_GetRowLabelSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetDefaultColLabelSize" wxGrid_GetDefaultColLabelSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetColLabelSize" wxGrid_GetColLabelSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetLabelBackgroundColour" wxGrid_GetLabelBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_GetLabelTextColour" wxGrid_GetLabelTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_GetLabelFont" wxGrid_GetLabelFont) :void
  (_obj :pointer)
  (font :pointer))

(defcfun ("wxGrid_GetRowLabelAlignment" wxGrid_GetRowLabelAlignment) :void
  (_obj :pointer)
  (horiz :pointer)
  (vert :pointer))

(defcfun ("wxGrid_GetColLabelAlignment" wxGrid_GetColLabelAlignment) :void
  (_obj :pointer)
  (horiz :pointer)
  (vert :pointer))

(defcfun ("wxGrid_GetRowLabelValue" wxGrid_GetRowLabelValue) :int
  (_obj :pointer)
  (row :int)
  (_buf :pointer))

(defcfun ("wxGrid_GetColLabelValue" wxGrid_GetColLabelValue) :int
  (_obj :pointer)
  (col :int)
  (_buf :pointer))

(defcfun ("wxGrid_GetGridLineColour" wxGrid_GetGridLineColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_GetCellHighlightColour" wxGrid_GetCellHighlightColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_SetRowLabelSize" wxGrid_SetRowLabelSize) :void
  (_obj :pointer)
  (width :int))

(defcfun ("wxGrid_SetColLabelSize" wxGrid_SetColLabelSize) :void
  (_obj :pointer)
  (height :int))

(defcfun ("wxGrid_SetLabelBackgroundColour" wxGrid_SetLabelBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_SetLabelTextColour" wxGrid_SetLabelTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_SetLabelFont" wxGrid_SetLabelFont) :void
  (_obj :pointer)
  (font :pointer))

(defcfun ("wxGrid_SetRowLabelAlignment" wxGrid_SetRowLabelAlignment) :void
  (_obj :pointer)
  (horiz :int)
  (vert :int))

(defcfun ("wxGrid_SetColLabelAlignment" wxGrid_SetColLabelAlignment) :void
  (_obj :pointer)
  (horiz :int)
  (vert :int))

(defcfun ("wxGrid_SetRowLabelValue" wxGrid_SetRowLabelValue) :void
  (_obj :pointer)
  (row :int)
  (label :pointer))

(defcfun ("wxGrid_SetColLabelValue" wxGrid_SetColLabelValue) :void
  (_obj :pointer)
  (col :int)
  (label :pointer))

(defcfun ("wxGrid_SetGridLineColour" wxGrid_SetGridLineColour) :void
  (_obj :pointer)
  (col :pointer))

(defcfun ("wxGrid_SetCellHighlightColour" wxGrid_SetCellHighlightColour) :void
  (_obj :pointer)
  (col :pointer))

(defcfun ("wxGrid_EnableDragRowSize" wxGrid_EnableDragRowSize) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("wxGrid_DisableDragRowSize" wxGrid_DisableDragRowSize) :void
  (_obj :pointer))

(defcfun ("wxGrid_CanDragRowSize" wxGrid_CanDragRowSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_EnableDragColSize" wxGrid_EnableDragColSize) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("wxGrid_DisableDragColSize" wxGrid_DisableDragColSize) :void
  (_obj :pointer))

(defcfun ("wxGrid_CanDragColSize" wxGrid_CanDragColSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_EnableDragGridSize" wxGrid_EnableDragGridSize) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("wxGrid_DisableDragGridSize" wxGrid_DisableDragGridSize) :void
  (_obj :pointer))

(defcfun ("wxGrid_CanDragGridSize" wxGrid_CanDragGridSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_SetRowAttr" wxGrid_SetRowAttr) :void
  (_obj :pointer)
  (row :int)
  (attr :pointer))

(defcfun ("wxGrid_SetColAttr" wxGrid_SetColAttr) :void
  (_obj :pointer)
  (col :int)
  (attr :pointer))

(defcfun ("wxGrid_SetColFormatBool" wxGrid_SetColFormatBool) :void
  (_obj :pointer)
  (col :int))

(defcfun ("wxGrid_SetColFormatNumber" wxGrid_SetColFormatNumber) :void
  (_obj :pointer)
  (col :int))

(defcfun ("wxGrid_SetColFormatFloat" wxGrid_SetColFormatFloat) :void
  (_obj :pointer)
  (col :int)
  (width :int)
  (precision :int))

(defcfun ("wxGrid_SetColFormatCustom" wxGrid_SetColFormatCustom) :void
  (_obj :pointer)
  (col :int)
  (typeName :pointer))

(defcfun ("wxGrid_EnableGridLines" wxGrid_EnableGridLines) :void
  (_obj :pointer)
  (enable :int))

(defcfun ("wxGrid_GridLinesEnabled" wxGrid_GridLinesEnabled) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetDefaultRowSize" wxGrid_GetDefaultRowSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetRowSize" wxGrid_GetRowSize) :int
  (_obj :pointer)
  (row :int))

(defcfun ("wxGrid_GetDefaultColSize" wxGrid_GetDefaultColSize) :int
  (_obj :pointer))

(defcfun ("wxGrid_GetColSize" wxGrid_GetColSize) :int
  (_obj :pointer)
  (col :int))

(defcfun ("wxGrid_GetDefaultCellBackgroundColour" wxGrid_GetDefaultCellBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_GetCellBackgroundColour" wxGrid_GetCellBackgroundColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(defcfun ("wxGrid_GetDefaultCellTextColour" wxGrid_GetDefaultCellTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_GetCellTextColour" wxGrid_GetCellTextColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(defcfun ("wxGrid_GetDefaultCellFont" wxGrid_GetDefaultCellFont) :void
  (_obj :pointer)
  (font :pointer))

(defcfun ("wxGrid_GetCellFont" wxGrid_GetCellFont) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (font :pointer))

(defcfun ("wxGrid_GetDefaultCellAlignment" wxGrid_GetDefaultCellAlignment) :void
  (_obj :pointer)
  (horiz :pointer)
  (vert :pointer))

(defcfun ("wxGrid_GetCellAlignment" wxGrid_GetCellAlignment) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (horiz :pointer)
  (vert :pointer))

(defcfun ("wxGrid_SetDefaultRowSize" wxGrid_SetDefaultRowSize) :void
  (_obj :pointer)
  (height :int)
  (resizeExistingRows :int))

(defcfun ("wxGrid_SetRowSize" wxGrid_SetRowSize) :void
  (_obj :pointer)
  (row :int)
  (height :int))

(defcfun ("wxGrid_SetDefaultColSize" wxGrid_SetDefaultColSize) :void
  (_obj :pointer)
  (width :int)
  (resizeExistingCols :int))

(defcfun ("wxGrid_SetColSize" wxGrid_SetColSize) :void
  (_obj :pointer)
  (col :int)
  (width :int))

(defcfun ("wxGrid_AutoSizeColumn" wxGrid_AutoSizeColumn) :void
  (_obj :pointer)
  (col :int)
  (setAsMin :int))

(defcfun ("wxGrid_AutoSizeRow" wxGrid_AutoSizeRow) :void
  (_obj :pointer)
  (row :int)
  (setAsMin :int))

(defcfun ("wxGrid_AutoSizeColumns" wxGrid_AutoSizeColumns) :void
  (_obj :pointer)
  (setAsMin :int))

(defcfun ("wxGrid_AutoSizeRows" wxGrid_AutoSizeRows) :void
  (_obj :pointer)
  (setAsMin :int))

(defcfun ("wxGrid_AutoSize" wxGrid_AutoSize) :void
  (_obj :pointer))

(defcfun ("wxGrid_SetColMinimalWidth" wxGrid_SetColMinimalWidth) :void
  (_obj :pointer)
  (col :int)
  (width :int))

(defcfun ("wxGrid_SetRowMinimalHeight" wxGrid_SetRowMinimalHeight) :void
  (_obj :pointer)
  (row :int)
  (width :int))

(defcfun ("wxGrid_SetDefaultCellBackgroundColour" wxGrid_SetDefaultCellBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_SetCellBackgroundColour" wxGrid_SetCellBackgroundColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(defcfun ("wxGrid_SetDefaultCellTextColour" wxGrid_SetDefaultCellTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxGrid_SetCellTextColour" wxGrid_SetCellTextColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(defcfun ("wxGrid_SetDefaultCellFont" wxGrid_SetDefaultCellFont) :void
  (_obj :pointer)
  (font :pointer))

(defcfun ("wxGrid_SetCellFont" wxGrid_SetCellFont) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (font :pointer))

(defcfun ("wxGrid_SetDefaultCellAlignment" wxGrid_SetDefaultCellAlignment) :void
  (_obj :pointer)
  (horiz :int)
  (vert :int))

(defcfun ("wxGrid_SetCellAlignment" wxGrid_SetCellAlignment) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (horiz :int)
  (vert :int))

(defcfun ("wxGrid_SetDefaultRenderer" wxGrid_SetDefaultRenderer) :void
  (_obj :pointer)
  (renderer :pointer))

(defcfun ("wxGrid_SetCellRenderer" wxGrid_SetCellRenderer) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (renderer :pointer))

(defcfun ("wxGrid_GetDefaultRenderer" wxGrid_GetDefaultRenderer) :pointer
  (_obj :pointer))

(defcfun ("wxGrid_GetCellRenderer" wxGrid_GetCellRenderer) :pointer
  (_obj :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGrid_SetDefaultEditor" wxGrid_SetDefaultEditor) :void
  (_obj :pointer)
  (editor :pointer))

(defcfun ("wxGrid_SetCellEditor" wxGrid_SetCellEditor) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (editor :pointer))

(defcfun ("wxGrid_GetDefaultEditor" wxGrid_GetDefaultEditor) :pointer
  (_obj :pointer))

(defcfun ("wxGrid_GetCellEditor" wxGrid_GetCellEditor) :pointer
  (_obj :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGrid_GetCellValue" wxGrid_GetCellValue) :int
  (_obj :pointer)
  (row :int)
  (col :int)
  (_buf :pointer))

(defcfun ("wxGrid_SetCellValue" wxGrid_SetCellValue) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (s :pointer))

(defcfun ("wxGrid_IsReadOnly" wxGrid_IsReadOnly) :int
  (_obj :pointer)
  (row :int)
  (col :int))

(defcfun ("wxGrid_SetReadOnly" wxGrid_SetReadOnly) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (isReadOnly :int))

(defcfun ("wxGrid_SelectRow" wxGrid_SelectRow) :void
  (_obj :pointer)
  (row :int)
  (addToSelected :int))

(defcfun ("wxGrid_SelectCol" wxGrid_SelectCol) :void
  (_obj :pointer)
  (col :int)
  (addToSelected :int))

(defcfun ("wxGrid_SelectBlock" wxGrid_SelectBlock) :void
  (_obj :pointer)
  (topRow :int)
  (leftCol :int)
  (bottomRow :int)
  (rightCol :int)
  (addToSelected :int))

(defcfun ("wxGrid_SelectAll" wxGrid_SelectAll) :void
  (_obj :pointer))

(defcfun ("wxGrid_IsSelection" wxGrid_IsSelection) :int
  (_obj :pointer))

(defcfun ("wxGrid_ClearSelection" wxGrid_ClearSelection) :void
  (_obj :pointer))

(defcfun ("wxGrid_IsInSelection" wxGrid_IsInSelection) :int
  (_obj :pointer)
  (row :int)
  (col :int))
